--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ edition = "2018"
 anyhow = "1.0"
 yasna = "0.3"
 pem = "0.8"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+clap = "=3.0.0-beta.2"
+serde = "1.0"
