Switch to rocksdb
Also switch to different key scheme so that we can use the db to also
store different data.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ ctclient = "0.4"
 base64 = "0.13"
 openssl = "0.10"
 byteorder = "1.0"
-leveldb = "0.8"
+rocksdb = "0.15"
 hex = "0.4"
 sha2 = "0.9"
